# osascript.py

./: .travis.yml  README.md  requirements.txt  setup.cfg  setup.py
osascript/: __init__.py
tests/osascript/: multiline.py  osascript("return 1")[1].strip()=="1"  osascript('display dialog')
tests/osascript/examples/: osascript('display dialog')  osascript('return "message"')
