[metadata]
name = osascript
version = 2018.11.20
url = https://github.com/looking-for-a-job/osascript.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = osascript applescript osx

[options]
install_requires = 
	only
	public
	runcmd
	setuptools
	temp
packages = 
	osascript
