# https://pypi.org/project/setupcfg-generator/
[metadata]
name = osascript
version = 2019.4.13
url = https://github.com/looking-for-a-job/osascript.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = osascript applescript osx

[options]
install_requires = 
	public
	runcmd
	setuptools
	temp
packages = 
	osascript
